--- a/index.html
+++ b/index.html
@@ -2,33 +2,31 @@
 <html lang="en">
 <head>
   <title>Basic Profile Page</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css"
 
   <meta charset="utf8">
 </head>
 
 <body>
-  <h1>Maria's Bio</h1>
-  <h2>Ria Ria</h2>
+  <div class="container">
+    <header class="header">
+      <h1>Maria's Bio</h1>
+    </header>
+    <section id="main_bio">
+      <h2>Maria Stenquist</h2>
+      <img id="bio_image" src="./snow.jpg"> 
+      <p> 
+      Fun fact: I own more pairs of ski boots than actual boots/shoes. I've got all different types: telemark ski boots, AT, cross-country: class and skate skiing boots, and the good 'ol alpine boots for resort skiing. To go along with all of those: I have various types of skis, climbing skins, risers, bindings, etc. Along with that occasionally I will need to bring crampons, snowshoes, ice trekkers, or an ice axe. If I need any of the latter: I will have a shovel, beacon, probes, and have checked the avalanche forecast closely. In other news, it's probably a close tie between cupcake ipsum and bacon ipsum: Cupcake ipsum dolor sit amet fruitcake sweet roll. Ice cream oat cake dragée jujubes biscuit pie chocolate cake sesame snaps apple pie. Marshmallow pastry chocolate bar jelly halvah biscuit tootsie roll jelly-o. Powder caramels macaroon icing donut. Soufflé cotton candy chocolate bar ice cream bear claw sweet roll carrot cake toffee. Tiramisu lollipop icing cupcake biscuit. Apple pie brownie soufflé icing. Candy canes brownie candy canes chocolate bar icing jelly beans. Cupcake cotton candy chocolate cake bonbon pie donut cake croissant pudding. Candy cookie caramels donut. Candy canes brownie topping icing icing. Powder gummi bears marzipan cheesecake gummies toffee cookie bear claw cupcake. T-bone sirloin pig cow jerky corned beef short ribs cupim biltong ham hock spare ribs tongue. Landjaeger chicken turducken tenderloin short loin ground round ham meatloaf kevin. Prosciutto sirloin shoulder, pork chop short loin beef ribs andouille tenderloin picanha corned beef turducken leberkas shank. Pork belly short ribs meatloaf tail sirloin, tongue boudin ribeye. Alcatra bresaola beef ribs, pig ribeye cupim pancetta biltong. Spare ribs strip steak shoulder leberkas tongue turkey short ribs doner rump tenderloin ham kevin pancetta tri-tip jowl. Landjaeger brisket short ribs pork loin t-bone, swine pig pork picanha pork belly hamburger jowl turducken. </p>
+    </section>
 
-  <div class="pic">
-    <img src="./Leo1.jpg" style="height:250px"; style="width:250px";> 
+    <section id="contact_info">
+      <h2 id="contact">Contact Stuff</h2> 
+        <ul>
+          <li><b>Email: </b><a href="mailto:kiwi.lemming@gmail.com">Maria's Email</a></li>
+          <li><b>Github: </b><a href="https://github.com/mariastenquist">Maria's Github</a></li>
+          <li><b>Porfolio: </b><a href="#">Coming Soon</a></li>
+        </ul> 
+    </section>
   </div>
-
-  <p> Exercitation biltong hamburger minim rump esse jowl. In velit t-bone drumstick mollit tenderloin pork loin chuck kielbasa beef ribs meatball sint irure. Est culpa occaecat short loin nisi tongue do in tail qui filet mignon ea chicken. Nostrud excepteur id pig aliquip, ground round consequat incididunt swine pancetta ipsum.
-
-  Sirloin officia irure, bresaola ribeye in fatback. Adipisicing ham hock sint ea tenderloin dolor alcatra kielbasa ham eu. Qui nisi ullamco occaecat ea ham id. Pancetta tempor shankle magna ad nostrud laborum nulla aliquip drumstick duis filet mignon bresaola. Jowl chuck labore dolor t-bone. Duis pariatur laboris mollit.
-
-  Ea excepteur eiusmod aliquip dolore. Flank bacon deserunt, quis incididunt kevin boudin velit. Est ut exercitation jerky pig, ex pastrami ham hock culpa mollit. Ad ball tip dolore ullamco brisket. Nostrud lorem ground round, culpa jowl rump cow. Sint deserunt tongue burgdoggen drumstick spare ribs short loin frankfurter elit leberkas cow. Ut bresaola veniam frankfurter in velit nisi mollit do tenderloin.</p>
-
-  <h2>Contact Stuff</h2>
-
-  <ul>
-    <li><b>Email: </b><a href="#">email@email.com</a></li>
-    <li><b>Github: </b><a href="https://github.com/mariastenquist">https://github.com/mariastenquist</a></li>
-    <li><b>Porfolio: </b><a href="#">Coming Soon</a></li>
-  </ul>
 </body>
-
-
-
 </html>
